--- a/editors/pluma/Makefile
+++ b/editors/pluma/Makefile
@@ -1,9 +1,8 @@
-# $NetBSD: Makefile,v 1.4 2017/02/12 06:25:16 ryoon Exp $
+# $NetBSD: Makefile,v 1.5 2017/06/23 17:32:16 youri Exp $
 
-PKGREVISION= 3
 .include "../../meta-pkgs/mate/Makefile.common"
 
-DISTNAME=	pluma-${MATE_VERSION}
+DISTNAME=	pluma-${VERSION:R}.2
 CATEGORIES=	editors
 
 COMMENT=	Small and lightweight UTF-8 text editor for the MATE
@@ -19,12 +18,8 @@ CONFIGURE_ARGS+=	--disable-updater # only for OS X and Windows
 
 .include "../../devel/glib2/schemas.mk"
 
+.include "../../devel/libpeas/buildlink3.mk"
 .include "../../x11/mate-desktop/buildlink3.mk"
-.include "../../devel/glib2/buildlink3.mk"
-.include "../../textproc/libxml2/buildlink3.mk"
-.include "../../x11/gtk2/buildlink3.mk"
-.include "../../x11/gtksourceview2/buildlink3.mk"
-.include "../../x11/libX11/buildlink3.mk"
-.include "../../x11/libSM/buildlink3.mk"
+.include "../../x11/gtksourceview3/buildlink3.mk"
 .include "../../sysutils/desktop-file-utils/desktopdb.mk"
 .include "../../mk/bsd.pkg.mk"
