--- a/meta-pkgs/mate/Makefile
+++ b/meta-pkgs/mate/Makefile
@@ -1,48 +1,52 @@
-# $NetBSD: Makefile,v 1.1 2016/05/21 19:23:25 youri Exp $
+# $NetBSD: Makefile,v 1.2 2017/06/23 17:33:51 youri Exp $
 
 .include "../../meta-pkgs/mate/Makefile.common"
 
-PKGNAME=	mate-${MATE_VERSION}
+MAINTAINER=	youri@NetBSD.org
+HOMEPAGE=	http://www.mate-desktop.org/
+LICENSE=	gnu-gpl-v3
+
+PKGNAME=	mate-${VERSION}
 CATEGORIES=	meta-pkgs
 
 COMMENT=	Meta-package for MATE desktop environment
 
 META_PACKAGE=	yes
 
-DEPENDS+=	atril>=1.14.0:../../print/atril
-DEPENDS+=	caja>=1.14.0:../../sysutils/caja
-DEPENDS+=	caja-dropbox>=1.14.0:../../sysutils/caja-dropbox
-DEPENDS+=	caja-extensions>=1.14.0:../../sysutils/caja-extensions
-DEPENDS+=	engrampa>=1.14.0:../../archivers/engrampa
-DEPENDS+=	eom>=1.14.0:../../graphics/eom
-DEPENDS+=	libmatekbd>=1.14.0:../../x11/libmatekbd
-DEPENDS+=	libmateweather>=1.14.0:../../misc/libmateweather
-DEPENDS+=	marco>=1.14.0:../../wm/marco
-DEPENDS+=	mate-applets>=1.14.0:../../x11/mate-applets
-DEPENDS+=	mate-backgrounds>=1.14.0:../../graphics/mate-backgrounds
-DEPENDS+=	mate-common>=1.14.0:../../devel/mate-common
-DEPENDS+=	mate-control-center>=1.14.0:../../x11/mate-control-center
-DEPENDS+=	mate-desktop>=1.14.0:../../x11/mate-desktop
-DEPENDS+=	mate-icon-theme>=1.14.0:../../graphics/mate-icon-theme
-DEPENDS+=	mate-icon-theme-faenza>=1.14.0:../../graphics/mate-icon-theme-faenza
-DEPENDS+=	mate-indicator-applet>=1.14.0:../../x11/mate-indicator-applet
-DEPENDS+=	mate-media>=1.14.0:../../multimedia/mate-media
-DEPENDS+=	mate-menus>=1.14.0:../../x11/mate-menus
-DEPENDS+=	mate-netbook>=1.14.0:../../wm/mate-netbook
-DEPENDS+=	mate-notification-daemon>=1.14.0:../../sysutils/mate-notification-daemon
-DEPENDS+=	mate-panel>=1.14.0:../../x11/mate-panel
-DEPENDS+=	mate-polkit>=1.14.0:../../security/mate-polkit
-DEPENDS+=	mate-power-manager>=1.14.0:../../sysutils/mate-power-manager
-DEPENDS+=	mate-screensaver>=1.14.0:../../x11/mate-screensaver
-DEPENDS+=	mate-sensors-applet>=1.14.0:../../sysutils/mate-sensors-applet
-DEPENDS+=	mate-session-manager>=1.14.0:../../x11/mate-session-manager
-DEPENDS+=	mate-settings-daemon>=1.14.0:../../x11/mate-settings-daemon
-DEPENDS+=	mate-system-monitor>=1.14.0:../../sysutils/mate-system-monitor
-DEPENDS+=	mate-terminal>=1.14.0:../../x11/mate-terminal
-DEPENDS+=	mate-themes>=3.20.0:../../graphics/mate-themes
-DEPENDS+=	mate-user-share>=1.14.0:../../net/mate-user-share
-DEPENDS+=	mate-utils>=1.14.0:../../misc/mate-utils
-DEPENDS+=	mozo>=1.14.0:../../x11/mozo
-DEPENDS+=	pluma>=1.14.0:../../editors/pluma
+DEPENDS+=	atril>=${VERSION}:../../print/atril
+DEPENDS+=	caja>=${VERSION}:../../sysutils/caja
+DEPENDS+=	caja-dropbox>=${VERSION}:../../sysutils/caja-dropbox
+DEPENDS+=	caja-extensions>=${VERSION}:../../sysutils/caja-extensions
+DEPENDS+=	engrampa>=${VIRSION}:../../archivers/engrampa
+DEPENDS+=	eom>=${VERSION}:../../graphics/eom
+DEPENDS+=	libmatekbd>=${VERSION}:../../x11/libmatekbd
+DEPENDS+=	libmateweather>=${VERSION}:../../misc/libmateweather
+DEPENDS+=	marco>=${VERSION}:../../wm/marco
+DEPENDS+=	mate-applets>=${VERSION}:../../x11/mate-applets
+DEPENDS+=	mate-backgrounds>=${VERSION}:../../graphics/mate-backgrounds
+DEPENDS+=	mate-common>=${VERSION}:../../devel/mate-common
+DEPENDS+=	mate-control-center>=${VERSION}:../../x11/mate-control-center
+DEPENDS+=	mate-desktop>=${VERSION}:../../x11/mate-desktop
+DEPENDS+=	mate-icon-theme>=${VERSION}:../../graphics/mate-icon-theme
+DEPENDS+=	mate-icon-theme-faenza>=${VERSION}:../../graphics/mate-icon-theme-faenza
+DEPENDS+=	mate-indicator-applet>=${VERSION}:../../x11/mate-indicator-applet
+DEPENDS+=	mate-media>=${VERSION}:../../multimedia/mate-media
+DEPENDS+=	mate-menus>=${VERSION}:../../x11/mate-menus
+DEPENDS+=	mate-netbook>=${VERSION}:../../wm/mate-netbook
+DEPENDS+=	mate-notification-daemon>=${VERSION}:../../sysutils/mate-notification-daemon
+DEPENDS+=	mate-panel>=${VERSION}:../../x11/mate-panel
+DEPENDS+=	mate-polkit>=${VERSION}:../../security/mate-polkit
+DEPENDS+=	mate-power-manager>=${VERSION}:../../sysutils/mate-power-manager
+DEPENDS+=	mate-screensaver>=${VERSION}:../../x11/mate-screensaver
+DEPENDS+=	mate-sensors-applet>=${VERSION}:../../sysutils/mate-sensors-applet
+DEPENDS+=	mate-session-manager>=${VERSION}:../../x11/mate-session-manager
+DEPENDS+=	mate-settings-daemon>=${VERSION}:../../x11/mate-settings-daemon
+DEPENDS+=	mate-system-monitor>=${VERSION}:../../sysutils/mate-system-monitor
+DEPENDS+=	mate-terminal>=${VERSION}:../../x11/mate-terminal
+DEPENDS+=	mate-themes>=${VERSION}:../../graphics/mate-themes
+DEPENDS+=	mate-user-share>=${VERSION}:../../net/mate-user-share
+DEPENDS+=	mate-utils>=${VERSION}:../../misc/mate-utils
+DEPENDS+=	mozo>=${VERSION}:../../x11/mozo
+DEPENDS+=	pluma>=${VERSION}:../../editors/pluma
 
 .include "../../mk/bsd.pkg.mk"
