--- a/audio/libmatemixer/Makefile
+++ b/audio/libmatemixer/Makefile
@@ -1,12 +1,10 @@
-# $NetBSD: Makefile,v 1.4 2017/02/12 06:25:04 ryoon Exp $
+# $NetBSD: Makefile,v 1.5 2017/06/23 20:39:14 youri Exp $
 
-PKGREVISION= 3
 .include "../../meta-pkgs/mate/Makefile.common"
 
-DISTNAME=	libmatemixer-${MATE_VERSION}
+DISTNAME=	libmatemixer-${VERSION}
 CATEGORIES=	audio
 
 COMMENT=	MATE audio mixer
 
-.include "../../x11/gtk2/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
