--- a/x11/xfce4-session/Makefile
+++ b/x11/xfce4-session/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.60 2017/06/22 09:40:24 youri Exp $
+# $NetBSD: Makefile,v 1.61 2017/06/23 21:27:09 youri Exp $
 
 .include "../../meta-pkgs/xfce4/Makefile.common"
 
@@ -46,6 +46,7 @@ CONF_FILES+=	${EGDIR}/xinitrc \
 
 .include "../../devel/libglade/buildlink3.mk"
 .include "../../devel/libwnck3/buildlink3.mk"
+.include "../../security/polkit/buildlink3.mk"
 .include "../../sysutils/desktop-file-utils/desktopdb.mk"
 .include "../../x11/libxfce4ui/buildlink3.mk"
 .include "../../graphics/hicolor-icon-theme/buildlink3.mk"
