--- a/meta-pkgs/texlive-collection-metapost/Makefile
+++ b/meta-pkgs/texlive-collection-metapost/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.8 2017/06/22 09:37:23 markd Exp $
+# $NetBSD: Makefile,v 1.9 2017/06/24 00:12:34 markd Exp $
 
 DISTNAME=	collection-metapost
-PKGNAME=	texlive-${DISTNAME}-2017pre1
+PKGNAME=	texlive-${DISTNAME}-2017
 CATEGORIES=	meta-pkgs
 MASTER_SITES=	# empty
 TEXLIVE_REV=	44297
@@ -43,7 +43,7 @@ DEPENDS+=	tex-mparrows-[0-9]*:../../graphics/tex-mparrows
 DEPENDS+=	tex-mpattern-[0-9]*:../../graphics/tex-mpattern
 DEPENDS+=	tex-mpcolornames-[0-9]*:../../graphics/tex-mpcolornames
 DEPENDS+=	tex-mpgraphics-[0-9]*:../../graphics/tex-mpgraphics
-# depend mptrees
+DEPENDS+=	tex-mptrees-[0-9]*:../../graphics/tex-mptrees
 DEPENDS+=	tex-piechartmp-[0-9]*:../../graphics/tex-piechartmp
 DEPENDS+=	tex-repere-[0-9]*:../../graphics/tex-repere
 DEPENDS+=	tex-roex-[0-9]*:../../graphics/tex-roex
