--- a/devel/py-jupyter_client/Makefile
+++ b/devel/py-jupyter_client/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.2 2017/05/04 19:47:48 adam Exp $
+# $NetBSD: Makefile,v 1.3 2017/06/24 08:17:00 adam Exp $
 
-DISTNAME=	jupyter_client-5.0.1
+DISTNAME=	jupyter_client-5.1.0
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
-CATEGORIES=	devel
+CATEGORIES=	devel python
 MASTER_SITES=	${MASTER_SITE_PYPI:=j/jupyter_client/}
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
@@ -14,11 +14,13 @@ DEPENDS+=	${PYPKGPREFIX}-traitlets>=4.1.0:../../devel/py-traitlets
 DEPENDS+=	${PYPKGPREFIX}-jupyter_core-[0-9]*:../../devel/py-jupyter_core
 DEPENDS+=	${PYPKGPREFIX}-zmq>=13.0.0:../../net/py-zmq
 DEPENDS+=	${PYPKGPREFIX}-dateutil>=2.1:../../time/py-dateutil
+BUILD_DEPENDS+=	${PYPKGPREFIX}-ipython-[0-9]*:../../devel/py-ipython
+BUILD_DEPENDS+=	${PYPKGPREFIX}-test-[0-9]*:../../devel/py-test
 
 USE_LANGUAGES=	# none
 
-post-install:
-	${MV} ${DESTDIR}${PREFIX}/bin/jupyter-kernelspec ${DESTDIR}${PREFIX}/bin/jupyter-kernelspec${PYVERSSUFFIX}
+do-test:
+	cd ${WRKSRC} && py.test-${PYVERSSUFFIX}
 
 .include "../../lang/python/distutils.mk"
 .include "../../lang/python/application.mk"
