--- a/databases/mysql51-server/Makefile
+++ b/databases/mysql51-server/Makefile
@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.29 2017/04/13 13:44:49 mef Exp $
+# $NetBSD: Makefile,v 1.30 2017/06/24 15:18:42 schmonz Exp $
 
 PKGNAME=	${DISTNAME:S/-/-server-/}
+PKGREVISION=	1
 COMMENT=	MySQL 5, a free SQL database (server)
 
 CONFLICTS=		mysql3-server-[0-9]*
