--- a/databases/mysql55-server/Makefile
+++ b/databases/mysql55-server/Makefile
@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.31 2016/04/18 10:01:16 adam Exp $
+# $NetBSD: Makefile,v 1.32 2017/06/24 15:18:42 schmonz Exp $
 
 PKGNAME=	${DISTNAME:S/-/-server-/}
+PKGREVISION=	1
 COMMENT=	MySQL 5, a free SQL database (server)
 
 CONFLICTS=	mysql3-server-[0-9]*
