--- a/databases/mysql57-server/Makefile
+++ b/databases/mysql57-server/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.6 2017/04/30 01:21:31 ryoon Exp $
+# $NetBSD: Makefile,v 1.7 2017/06/24 15:18:42 schmonz Exp $
 
 PKGNAME=	${DISTNAME:S/-/-server-/}
-PKGREVISION=	1
+PKGREVISION=	2
 COMMENT=	MySQL 5, a free SQL database (server)
 
 CONFLICTS=	mysql3-server-[0-9]*
