--- a/devel/snappy/Makefile
+++ b/devel/snappy/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.8 2017/02/26 08:50:19 adam Exp $
+# $NetBSD: Makefile,v 1.9 2017/06/24 18:57:28 agc Exp $
 
 DISTNAME=	snappy-1.1.4
 CATEGORIES=	devel
@@ -16,5 +16,6 @@ USE_LIBTOOL=		yes
 GNU_CONFIGURE=		yes
 PKGCONFIG_OVERRIDE+=	snappy.pc.in
 
+.include "../../devel/googletest/buildlink3.mk"
 .include "../../devel/zlib/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
