--- a/x11/mate-terminal/Makefile
+++ b/x11/mate-terminal/Makefile
@@ -1,9 +1,9 @@
-# $NetBSD: Makefile,v 1.4 2017/02/12 06:26:14 ryoon Exp $
+# $NetBSD: Makefile,v 1.5 2017/06/25 02:24:56 taca Exp $
 
 PKGREVISION= 3
 .include "../../meta-pkgs/mate/Makefile.common"
 
-DISTNAME=	mate-terminal-${MATE_VERSION}
+DISTNAME=	mate-terminal-${VERSION}
 CATEGORIES=	x11
 
 COMMENT=	MATE terminal emulator application
