--- a/devel/p5-Test-Simple/Makefile
+++ b/devel/p5-Test-Simple/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.73 2017/06/05 14:23:46 ryoon Exp $
+# $NetBSD: Makefile,v 1.74 2017/06/25 07:09:08 wiz Exp $
 
-DISTNAME=		Test-Simple-1.302085
+DISTNAME=		Test-Simple-1.302086
 PKGNAME=		p5-${DISTNAME}
-PKGREVISION=		1
 CATEGORIES=		devel perl5
 MASTER_SITES=		${MASTER_SITE_PERL_CPAN:=Test/}
 
