--- a/devel/p5-Scalar-List-Utils/Makefile
+++ b/devel/p5-Scalar-List-Utils/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.40 2017/06/05 14:23:34 ryoon Exp $
+# $NetBSD: Makefile,v 1.41 2017/06/25 07:10:19 wiz Exp $
 
-DISTNAME=	Scalar-List-Utils-1.47
+DISTNAME=	Scalar-List-Utils-1.48
 PKGNAME=	p5-${DISTNAME}
-PKGREVISION=	1
 CATEGORIES=	devel misc perl5
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=Scalar/}
 
