--- a/x11/xfce4-session/Makefile
+++ b/x11/xfce4-session/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.61 2017/06/23 21:27:09 youri Exp $
+# $NetBSD: Makefile,v 1.62 2017/06/25 12:39:09 martin Exp $
 
 .include "../../meta-pkgs/xfce4/Makefile.common"
 
@@ -44,9 +44,10 @@ CONF_FILES+=	${EGDIR}/xinitrc \
 .include "../../sysutils/consolekit/buildlink3.mk"
 .endif
 
+.include "options.mk"
+
 .include "../../devel/libglade/buildlink3.mk"
 .include "../../devel/libwnck3/buildlink3.mk"
-.include "../../security/polkit/buildlink3.mk"
 .include "../../sysutils/desktop-file-utils/desktopdb.mk"
 .include "../../x11/libxfce4ui/buildlink3.mk"
 .include "../../graphics/hicolor-icon-theme/buildlink3.mk"
