--- a/x11/mate-terminal/Makefile
+++ b/x11/mate-terminal/Makefile
@@ -1,9 +1,8 @@
-# $NetBSD: Makefile,v 1.5 2017/06/25 02:24:56 taca Exp $
+# $NetBSD: Makefile,v 1.6 2017/06/25 23:21:56 youri Exp $
 
-PKGREVISION= 3
 .include "../../meta-pkgs/mate/Makefile.common"
 
-DISTNAME=	mate-terminal-${VERSION}
+DISTNAME=	mate-terminal-${VERSION:R}.1
 CATEGORIES=	x11
 
 COMMENT=	MATE terminal emulator application
@@ -19,13 +18,5 @@ REPLACE_PERL+=	mate-terminal.wrapper
 
 .include "../../sysutils/desktop-file-utils/desktopdb.mk"
 .include "../../x11/mate-desktop/buildlink3.mk"
-.include "../../devel/dconf/buildlink3.mk"
-.include "../../devel/glib2/buildlink3.mk"
-.include "../../x11/gtk2/buildlink3.mk"
-.include "../../x11/vte/buildlink3.mk"
-.if !empty(PKG_BUILD_OPTIONS.gtk2:Mx11)
-.include "../../x11/libX11/buildlink3.mk"
-.include "../../x11/libSM/buildlink3.mk"
-.endif
-.include "../../lang/python/application.mk"
+.include "../../x11/vte3/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
