--- a/mail/mess822/Makefile
+++ b/mail/mess822/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.27 2017/05/29 23:20:54 schmonz Exp $
+# $NetBSD: Makefile,v 1.28 2017/06/26 02:04:35 schmonz Exp $
 #
 
 DISTNAME=		mess822-0.58
-PKGREVISION=		6
+PKGREVISION=		7
 CATEGORIES=		mail
 MASTER_SITES=		http://cr.yp.to/software/
 
@@ -11,27 +11,27 @@ HOMEPAGE=		http://cr.yp.to/mess822.html
 COMMENT=		Library for parsing Internet mail messages
 LICENSE=		public-domain
 
+DEPENDS_LIBTAI+=	libtai>=0.60nb5:../../devel/libtai
+DEPENDS+=		${DEPENDS_LIBTAI}
 DEPENDS+=		qmail>=1.03nb7:../../mail/qmail
 
-USE_TOOLS+=		nroff
-
 DJB_RESTRICTED=		no
-
-EGDIR=			${PREFIX}/share/examples/mess822
-CFLAGS+=		-DPKG_SYSCONFDIR="\"${PKG_SYSCONFDIR}\""
-MAKE_DIRS+=		${PKG_SYSCONFDIR}
-CONF_FILES+=		${EGDIR}/leapsecs.dat ${PKG_SYSCONFDIR}/leapsecs.dat
 
 DJB_BUILD_TARGETS=	install instcheck
 
 AUTO_MKDIRS=		yes
 
-SUBST_FILES.djbware+=	cdb_seek.c leapsecs_read.c
+SUBST_FILES.djbware+=	cdb_seek.c
 
 SUBST_CLASSES+=		paths
 SUBST_STAGE.paths=	do-configure
 SUBST_FILES.paths=	hier.c
 SUBST_SED.paths=	-e 's,@PKGMANDIR@,${PKGMANDIR},g'
 
+pre-build:
+	cp ${BUILDLINK_DIR}/include/*.h ${WRKSRC}
+	cp ${BUILDLINK_DIR}/lib/*.a ${WRKSRC}
+
+.include "../../devel/libtai/buildlink3.mk"
 .include "../../mk/djbware.mk"
 .include "../../mk/bsd.pkg.mk"
