--- a/net/openvpn/Makefile
+++ b/net/openvpn/Makefile
@@ -1,9 +1,11 @@
-# $NetBSD: Makefile,v 1.62 2017/05/24 20:35:12 adam Exp $
+# $NetBSD: Makefile,v 1.63 2017/06/26 07:21:21 adam Exp $
 
 DISTNAME=	${OPENVPN_DISTNAME}
 CATEGORIES=	net
 MASTER_SITES=	${OPENVPN_MASTER_SITES}
 EXTRACT_SUFX=	.tar.xz
+# Remove DIST_SUBDIR on next update
+DIST_SUBDIR=	${OPENVPN_DIST_SUBDIR}
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	http://openvpn.net/
