--- a/net/openvpn/Makefile.common
+++ b/net/openvpn/Makefile.common
@@ -1,11 +1,13 @@
-# $NetBSD: Makefile.common,v 1.9 2017/06/21 19:00:47 adam Exp $
+# $NetBSD: Makefile.common,v 1.10 2017/06/26 07:21:21 adam Exp $
 # used by net/openvpn/Makefile
 # used by net/openvpn-acct-wtmpx/Makefile
 # used by net/openvpn-nagios/Makefile
 
 OPENVPN_DISTNAME=	openvpn-2.4.3
-OPENVPN_DISTFILE=	${OPENVPN_DISTNAME}.tar.xz
-OPENVPN_MASTER_SITES=	http://swupdate.openvpn.net/community/releases/
+# Remove DIST_SUBDIR on next update
+OPENVPN_DIST_SUBDIR=	openvpn
+OPENVPN_DISTFILE=	${OPENVPN_DIST_SUBDIR}/${OPENVPN_DISTNAME}.tar.xz
+OPENVPN_MASTER_SITES=	http://swupdate.openvpn.org/community/releases/
 SITES.${OPENVPN_DISTFILE}=	${OPENVPN_MASTER_SITES}
 
 OPENVPN_USER?=		openvpn
