--- a/www/p5-Catalyst-Plugin-Session-State-Cookie/Makefile
+++ b/www/p5-Catalyst-Plugin-Session-State-Cookie/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.22 2017/06/05 14:25:14 ryoon Exp $
+# $NetBSD: Makefile,v 1.23 2017/06/26 09:31:30 jperkin Exp $
 
 DISTNAME=	Catalyst-Plugin-Session-State-Cookie-0.17
 PKGNAME=	p5-${DISTNAME}
@@ -19,6 +19,8 @@ DEPENDS+=	p5-namespace-autoclean-[0-9]*:../../devel/p5-namespace-autoclean
 
 PERL5_PACKLIST= auto/Catalyst/Plugin/Session/State/Cookie/.packlist
 PERL5_MODULE_TYPE=	Module::Install::Bundled
+
+MAKE_ENV+=	PERL_USE_UNSAFE_INC=1
 
 .include "../../lang/perl5/module.mk"
 .include "../../mk/bsd.pkg.mk"
