--- a/net/mtr/Makefile
+++ b/net/mtr/Makefile
@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.99 2017/06/14 20:26:56 wiz Exp $
+# $NetBSD: Makefile,v 1.100 2017/06/26 14:41:37 wiz Exp $
 
-DISTNAME=	mtr-0.92
+DISTNAME=	mtr-0.87
+PKGREVISION=	2
 CATEGORIES=	net
 MASTER_SITES=	ftp://ftp.bitwizard.nl/mtr/
 
