--- a/misc/mate-utils/Makefile
+++ b/misc/mate-utils/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.5 2017/06/23 17:31:32 youri Exp $
+# $NetBSD: Makefile,v 1.6 2017/06/26 16:44:00 joerg Exp $
 
 .include "../../meta-pkgs/mate/Makefile.common"
 
@@ -27,4 +27,5 @@ CONFIGURE_ARGS+=	--with-grep=${GREP:Q}
 .include "../../devel/zlib/buildlink3.mk"
 .include "../../graphics/hicolor-icon-theme/buildlink3.mk"
 .include "../../sysutils/libgtop/buildlink3.mk"
+.include "../../x11/libSM/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
