--- a/net/mtr/Makefile
+++ b/net/mtr/Makefile
@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.100 2017/06/26 14:41:37 wiz Exp $
+# $NetBSD: Makefile,v 1.101 2017/06/27 12:22:38 wiz Exp $
 
-DISTNAME=	mtr-0.87
-PKGREVISION=	2
+DISTNAME=	mtr-0.92
 CATEGORIES=	net
 MASTER_SITES=	ftp://ftp.bitwizard.nl/mtr/
 
@@ -12,21 +11,13 @@ LICENSE=	gnu-gpl-v2
 
 GNU_CONFIGURE=		YES
 USE_TOOLS+=		pkg-config
-INSTALLATION_DIRS=	${PKGMANDIR}/man8 sbin share/doc/mtr
+INSTALLATION_DIRS=	share/doc/mtr
 
 .include "options.mk"
 
-SPECIAL_PERMS=	sbin/mtr ${SETUID_ROOT_PERMS}
+SPECIAL_PERMS=	sbin/mtr-packet ${SETUID_ROOT_PERMS}
 
-# Remove hard-coded compiler option that GCC 3.x doesn't support.
-.include "../../mk/compiler.mk"
-.if !empty(CC_VERSION:Mgcc-3.*)
-BUILDLINK_TRANSFORM+=	rm:-Wno-pointer-sign
-.endif
-
-do-install:
-	${INSTALL_PROGRAM} ${WRKSRC}/mtr ${DESTDIR}${PREFIX}/sbin
-	${INSTALL_DATA} ${WRKSRC}/mtr.8 ${DESTDIR}${PREFIX}/${PKGMANDIR}/man8
+post-install:
 	${INSTALL_DATA} ${WRKSRC}/SECURITY ${DESTDIR}${PREFIX}/share/doc/mtr
 
 .include "../../mk/curses.buildlink3.mk"
