--- a/lang/ruby24-base/Makefile
+++ b/lang/ruby24-base/Makefile
@@ -1,7 +1,8 @@
-# $NetBSD: Makefile,v 1.2 2017/06/19 11:11:34 jperkin Exp $
+# $NetBSD: Makefile,v 1.3 2017/06/27 15:25:19 jperkin Exp $
 
 DISTNAME=	${RUBY_DISTNAME}
 PKGNAME=	${RUBY_PKGPREFIX}-base-${RUBY_VERSION}
+PKGREVISION=	1
 CATEGORIES=	lang ruby
 MASTER_SITES=	${MASTER_SITE_RUBY}
 
@@ -11,7 +12,7 @@ COMMENT=	Ruby ${RUBY_VERSION} release minimum base package
 
 RUBY_VERSIONS_ACCEPTED=	24
 
-USE_LANGUAGES=		c99
+USE_LANGUAGES=		c
 USE_TOOLS+=		pax yacc pkg-config
 GNU_CONFIGURE=		yes
 TEST_TARGET=		test
