--- a/sysutils/strace/Makefile
+++ b/sysutils/strace/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.25 2016/07/09 06:39:02 wiz Exp $
+# $NetBSD: Makefile,v 1.26 2017/06/27 15:26:05 christos Exp $
 #
 
 DISTNAME=		strace-4.5.15
-PKGREVISION=		9
+PKGREVISION=		10
 CATEGORIES=		sysutils
 MASTER_SITES=		${MASTER_SITE_SOURCEFORGE:=strace/}
 EXTRACT_SUFX=		.tar.bz2
