--- a/www/p5-Test-WWW-Mechanize-Catalyst/Makefile
+++ b/www/p5-Test-WWW-Mechanize-Catalyst/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.16 2017/06/05 14:25:32 ryoon Exp $
+# $NetBSD: Makefile,v 1.17 2017/06/27 15:40:23 jperkin Exp $
 
 DISTNAME=	Test-WWW-Mechanize-Catalyst-0.60
 PKGNAME=	p5-${DISTNAME}
@@ -26,6 +26,8 @@ BUILD_DEPENDS+=	p5-Test-Exception-[0-9]*:../../devel/p5-Test-Exception
 
 USE_LANGUAGES=	# empty
 PERL5_PACKLIST= auto/Test/WWW/Mechanize/Catalyst/.packlist
+
+MAKE_ENV+=	PERL_USE_UNSAFE_INC=1
 
 .include "../../lang/perl5/module.mk"
 .include "../../mk/bsd.pkg.mk"
